# VCPMobile

./: .gitignore  README.md  context_sanitizer重构规格书.md  package.json  pnpm-lock.yaml  tsconfig.json  模块化构建方案.md
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: VCPMobile Rust 网络层重载规格书 Internal Revision1.md  lib.rs  main.rs
src-tauri/src/vcp_modules/: agent_config_manager.rs  app_settings_manager.rs  avatar_color_extractor.rs  chat_manager.rs  content_parser.rs  context_sanitizer.rs  db_manager.rs  emoticon_manager.rs  file_manager.rs  file_watcher.rs  group_manager.rs  group_orchestrator.rs  index_service.rs  lifecycle_manager.rs  message_processor.rs  mod.rs  model_manager.rs  topic_list_manager.rs  vcp_client.rs  vcp_log_service.rs
src-tauri/src/vcp_modules/ipc/: agent_handlers.rs  group_handlers.rs  settings_handlers.rs  sync_handlers.rs
src/assets/: themes.css
src/components/: AttachmentPreview.vue  AttachmentViewer.vue  FullScreenEditor.vue  GlobalOverlayManager.vue  InputEnhancer.vue  MessageRenderer.vue  NotificationDrawer.vue  ToastManager.vue  VcpPrompt.vue
src/components/blocks/: MarkdownBlock.vue  ToolBlock.vue
src/composables/: useEmoticonFixer.ts  useModalHistory.ts  useNotificationProcessor.ts
src/router/: index.ts
src/stores/: appLifecycle.ts  assistant.ts  chatManager.ts  modelStore.ts  notification.ts  streamManager.ts  ui.ts
src/views/: ChatView.vue  SettingsView.vue
