[package]
name = "vcp-mobile"
version = "0.1.0"
description = "A Tauri App"
authors = ["MRiecy"]
edition = "2026"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vcp_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
url = "2"
dashmap = "6"
tokio-util = { version = "0.7", features = ["codec"] }
scraper = "0.19"
ego-tree = "0.6"
lru = "0.12"
fancy-regex = "0.13"
regex = "1"
lazy_static = "1.4"

